welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value d
	if ( a + b == 10 || b + c == 10 || c + d == 10 ) return 10
                                               ^